# county-climate-means

./: .gitignore  CLAUDE.md  CODEBASE_ARCHITECTURE.md  CRS_HANDLING_DOCUMENTATION.md  MULTIPROCESSING_SETUP.md  PIPELINE_USAGE_GUIDE.md  PROJECT_OVERVIEW.md  README.md  REFACTORING_SUMMARY.md  RUN_FROM_SCRATCH.md  SETUP.md  ZARR_POC_SUMMARY.md  alaska_climate_processing.py  alaska_processing_summary.json  climate_means.py  climate_multiprocessing.py  debug_hang_location.py  debug_multiprocessing.py  debug_multiprocessing_v2.py  estimate_complete_pipeline.py  execution_report_exec_1749820026.yaml  execution_report_exec_1749820396.yaml  execution_report_exec_1749837560.yaml  guam_climate_processing.py  guam_processing_summary.json  hawaii_climate_processing.py  hawaii_processing_summary.json  io_util.py  main.py  main_orchestrated.py  mkdocs.yml  optimize.py  process_all_climate_normals.py  process_climate_normals_multiprocessing.py  prvi_climate_processing.py  prvi_processing_summary.json  pyproject.toml  pytest.ini  requirements.txt  run_climate_means.py  (+14 more)
.cache/plugin/git-committers/: page-authors.json
.cursor/rules/: logic.mdc  rootcause.mdc  teach.mdc
configs/: METRICS_REGIONS_EXAMPLES.md  README.md  means_conus_ssp585_flexible.yaml  means_hawaii_ssp585_flexible.yaml  metrics_hawaii_prvi_guam.yaml  metrics_non_conus_regions.yaml  phase2_metrics_only.yaml  pipeline_parallel_variables.yaml  production_ultra_high_performance.yaml  production_with_validation.yaml  validation_alaska_precipitation.yaml  validation_conus_all_precipitation.yaml  validation_conus_precipitation.yaml  validation_hawaii_test.yaml
configs/deprecated/: pipeline_full_processing.yaml
configs/development/: test_demo.yaml  test_local.yaml
configs/development/test/: pipeline_test_complete.yaml  test_hawaii_v2.yaml  test_organized_output.yaml
configs/production/: pipeline_complete_all_regions.yaml  production_organized_output.yaml
configs/specialized/gap_filling/: ssp245_temperature_extremes.yaml
configs/templates/: metrics_single_region_template.yaml
configs/zarr/: zarr_pipeline_example.yaml
county_climate/: __init__.py
county_climate/means/: __init__.py  config.py
county_climate/means/core/: __init__.py  flexible_config.py  maximum_processor.py  multiprocessing_engine.py  parallel_variables_processor.py  regional_climate_processor.py  regional_climate_processor.py.backup  regional_climate_processor_v2.py  regional_climate_processor_v3.py  single_variable_processor.py  zarr_climate_processor.py
county_climate/means/integration/: __init__.py  flexible_stage_handlers.py  processor_wrapper.py  real_stage_handlers.py  stage_handlers.py  stage_handlers_v2.py  zarr_stage_handler.py
county_climate/means/models/: MIGRATION_GUIDE.md  __init__.py  base.py  gfdl.py  noresm2.py  registry.py
county_climate/means/pipeline/: __init__.py  bridge.py  bridge_v2.py  catalog_bridge.py  interface.py
county_climate/means/utils/: flexible_io_util.py  io_util.py  mp_progress.py  mp_progress.py.backup  rich_progress.py
county_climate/means/validation/: validate_climate_data_alignment.py  validate_region_extents.py
county_climate/means/visualization/: __init__.py  maximum_data_visualizer.py  regional_visualizer.py
county_climate/means/workflow/: __init__.py  (+2 more)
county_climate/metrics/: __init__.py  main.py
county_climate/shared/: __init__.py  manifest.py
county_climate/validation/: __init__.py  validation_suite.py
docs/: METHODS.md  PROGRESS_TRACKING.md  PROGRESS_TRACKING_FIXES.md  SCALING_ANALYSIS.md  ZARR_IMPLEMENTATION.md  index.md  phase1_multiprocessing_architecture.md  phase1_multiprocessing_architecture_corrected.md  phase1_multiprocessing_ideal_architecture.md
docs/api/: core.md
docs/getting-started/: installation.md
docs/tutorials/: climate-means.md  validation.md
legacy_scripts/: climate_means.py  climate_multiprocessing.py  io_util.py  monitor_progress.py  optimize.py  process_all_climate_normals.py  process_climate_normals_multiprocessing.py  regions.py
region_validation_maps/: README.md  alignment_validation_summary.txt
scripts/: convert_county_boundaries.py  zarr_proof_of_concept.py
src/cli/: __init__.py  main.py
src/config/: __init__.py  constants.py  settings.py
src/core/: __init__.py  climate_engine.py  multiprocessing_engine.py
src/monitoring/: __init__.py  status_checker.py
src/pipelines/: __init__.py  parallel.py  sequential.py
src/tests/: __init__.py
src/utils/: __init__.py  io.py  optimization.py  time_handling.py
tests/: README.md  README_E2E.md  __init__.py  test_actual_processing.py  test_climate_means_e2e.py  test_config_integration.py  test_contracts.py  test_coordinate_issue.py  test_dask_integration.py  test_end_to_end_pipeline.py  test_file_handler.py  test_integrated_progress.py  test_integration.py  test_metrics_stage_integration.py  test_regions_integration.py  test_rich_progress.py  test_runner_integration.py  test_time_integration.py
(+52 files in other folders)
